# NeuralAmpModelerCore

./: CMakeLists.txt  LICENSE  README.md
AudioDSPTools/: CMakeLists.txt
AudioDSPTools/dsp/: CMakeLists.txt  ImpulseResponse.cpp  ImpulseResponse.h  NoiseGate.cpp  NoiseGate.h  RecursiveLinearFilter.cpp  RecursiveLinearFilter.h  dsp.cpp  dsp.h  wav.cpp
AudioDSPTools/dsp/ResamplingContainer/: CMakeLists.txt  ResamplingContainer.h
AudioDSPTools/dsp/ResamplingContainer/Dependencies/: CMakeLists.txt  LanczosResampler.h
AudioDSPTools/dsp/ResamplingContainer/Dependencies/WDL/: CMakeLists.txt
NAM/: CMakeLists.txt  convnet.cpp  convnet.h  get_dsp.cpp  lstm.cpp  lstm.h  namdsp.cpp  namdsp.h  wavenet.cpp  wavenet.h
NeuralAmpModelerCore/: CMakeLists.txt
NeuralAmpModelerCore/NAM/: CMakeLists.txt  convnet.cpp  convnet.h  dsp.cpp  dsp.h  get_dsp.cpp  lstm.cpp  lstm.h  wavenet.cpp  wavenet.h
dsp/: CMakeLists.txt  ImpulseResponse.cpp  ImpulseResponse.h  NoiseGate.cpp  NoiseGate.h  RecursiveLinearFilter.cpp  RecursiveLinearFilter.h  Resample.h  coredsp.cpp  coredsp.h  dsp.cpp  dsp.h  wav.cpp  wav.h
